[core] Increase admin possibilities
This commit adds more possibilities for the admin to control this MOD. He can now
access a new token {REPORTER} (just the username of the reporter) {REPORTER_FULL}
(the full profile link to the profile of the reporter). You can now also set the
topic title that is used based upon its a pm or post report. Tokens can be used
in the titles as well.
Also some overall cleaning in the acp template file.

--- a/root/adm/style/mods/report2topic++/report2topic++_config.html
+++ b/root/adm/style/mods/report2topic++/report2topic++_config.html
@@ -24,15 +24,33 @@
 
 	<dl>
 	    <dt><label for="report2topic_post_forum">{L_R2T_DEST_FORUM}:</label><br /><span>{L_R2T_DEST_FORUM_EXPLAIN}</span></dt>
-	    <dd><label><input type="text" id="report2topic_post_forum" name="report2topic_post_forum" value="{S_DEST_FORUM}" /></label></dd>
+	    <dd><input type="text" id="report2topic_post_forum" name="report2topic_post_forum" value="{S_DEST_FORUM}" /></dd>
+	</dl>
+    </fieldset>
+
+    <fieldset>
+	<legend>{L_ACP_REPORT2TOPIC_PM_CONFIG}</legend>
+
+	<dl>
+	    <dt><label for="report2topic_pm_title">{L_R2T_PM_TITLE}:</label><br /><span>{L_R2T_PM_TITLE_EXPLAIN}</span></dt>
+	    <dd><input class="text medium" type="text" id="report2topic_pm_title" name="report2topic_pm_title" value="{S_PM_TITLE}" /></dd>
 	</dl>
 	<dl>
 	    <dt><label for="report2topic_pm_template">{L_R2T_PM_TEMPLATE}:</label><br /><span>{L_R2T_PM_TEMPLATE_EXPLAIN}</span></dt>
-	    <dd><label><textarea id="report2topic_pm_template" name="report2topic_pm_template" cols="60" rows="5">{S_PM_TEMPLATE}</textarea></label></dd>
+	    <dd><textarea id="report2topic_pm_template" name="report2topic_pm_template" cols="60" rows="5">{S_PM_TEMPLATE}</textarea></dd>
 	</dl>
+    </fieldset>
+
+    <fieldset>
+	<legend>{L_ACP_REPORT2TOPIC_POST_CONFIG}</legend>
+
 	<dl>
 	    <dt><label for="report2topic_post_template">{L_R2T_POST_TEMPLATE}:</label><br /><span>{L_R2T_POST_TEMPLATE_EXPLAIN}</span></dt>
-	    <dd><label><textarea id="report2topic_post_template" name="report2topic_post_template" cols="60" rows="5">{S_POST_TEMPLATE}</textarea></label></dd>
+	    <dd><textarea id="report2topic_post_template" name="report2topic_post_template" cols="60" rows="5">{S_POST_TEMPLATE}</textarea></dd>
+	</dl>
+	<dl>
+	    <dt><label for="report2topic_post_title">{L_R2T_POST_TITLE}:</label><br /><span>{L_R2T_POST_TITLE_EXPLAIN}</span></dt>
+	    <dd><input class="text medium" type="text" id="report2topic_post_title" name="report2topic_post_title" value="{S_POST_TITLE}" /></dd>
 	</dl>
     </fieldset>
 
