[task/pm-forum-designate] PM report target forum
Add the ability for the administrator to define which forum will be used to post PM reports.
Also some small fixes to the topic post logic to prevent errors when reporting a PM.

--- a/root/adm/style/mods/report2topic++/report2topic++_config.html
+++ b/root/adm/style/mods/report2topic++/report2topic++_config.html
@@ -39,6 +39,10 @@
 	    <dt><label for="report2topic_pm_template">{L_R2T_PM_TEMPLATE}:</label><br /><span>{L_R2T_PM_TEMPLATE_EXPLAIN}</span></dt>
 	    <dd><textarea id="report2topic_pm_template" name="report2topic_pm_template" cols="60" rows="5">{S_PM_TEMPLATE}</textarea></dd>
 	</dl>
+	<dl>
+	    <dt><label for="report2topic_pm_forum">{L_R2T_PM_DEST_FORUM}:</label><br /><span>{L_R2T_PM_DEST_FORUM_EXPLAIN}</span></dt>
+	    <dd><select id="report2topic_pm_forum" name="report2topic_pm_forum">{S_PM_DEST_OPTIONS}</select></dd>
+	</dl>
     </fieldset>
 
     <fieldset>
