--- a/root/adm/style/mods/report2topic++/report2topic++_config.html
+++ b/root/adm/style/mods/report2topic++/report2topic++_config.html
@@ -23,8 +23,16 @@
 	<legend>{L_ACP_REPORT2TOPIC_CONFIG}</legend>
 
 	<dl>
+	    <dt><label for="report2topic_post_template">{L_R2T_POST_TEMPLATE}:</label><br /><span>{L_R2T_POST_TEMPLATE_EXPLAIN}</span></dt>
+	    <dd><textarea id="report2topic_post_template" name="report2topic_post_template" cols="60" rows="5">{S_POST_TEMPLATE}</textarea></dd>
+	</dl>
+	<dl>
+	    <dt><label for="report2topic_post_title">{L_R2T_POST_TITLE}:</label><br /><span>{L_R2T_POST_TITLE_EXPLAIN}</span></dt>
+	    <dd><input class="text medium" type="text" id="report2topic_post_title" name="report2topic_post_title" value="{S_POST_TITLE}" /></dd>
+	</dl>
+	<dl>
 	    <dt><label for="report2topic_post_forum">{L_R2T_DEST_FORUM}:</label><br /><span>{L_R2T_DEST_FORUM_EXPLAIN}</span></dt>
-	    <dd><input type="text" id="report2topic_post_forum" name="report2topic_post_forum" value="{S_DEST_FORUM}" /></dd>
+	    <dd><select id="report2topic_post_forum" name="report2topic_post_forum">{S_DEST_OPTIONS}</select></dd>
 	</dl>
     </fieldset>
 
@@ -42,19 +50,6 @@
 	<dl>
 	    <dt><label for="report2topic_pm_forum">{L_R2T_PM_DEST_FORUM}:</label><br /><span>{L_R2T_PM_DEST_FORUM_EXPLAIN}</span></dt>
 	    <dd><select id="report2topic_pm_forum" name="report2topic_pm_forum">{S_PM_DEST_OPTIONS}</select></dd>
-	</dl>
-    </fieldset>
-
-    <fieldset>
-	<legend>{L_ACP_REPORT2TOPIC_POST_CONFIG}</legend>
-
-	<dl>
-	    <dt><label for="report2topic_post_template">{L_R2T_POST_TEMPLATE}:</label><br /><span>{L_R2T_POST_TEMPLATE_EXPLAIN}</span></dt>
-	    <dd><textarea id="report2topic_post_template" name="report2topic_post_template" cols="60" rows="5">{S_POST_TEMPLATE}</textarea></dd>
-	</dl>
-	<dl>
-	    <dt><label for="report2topic_post_title">{L_R2T_POST_TITLE}:</label><br /><span>{L_R2T_POST_TITLE_EXPLAIN}</span></dt>
-	    <dd><input class="text medium" type="text" id="report2topic_post_title" name="report2topic_post_title" value="{S_POST_TITLE}" /></dd>
 	</dl>
     </fieldset>
 
